reference-llvm/tests/should-fail/fail8.mu
// bad args to intrinsic (takes none)

function @entry foo() {
    [read "hello, world", .console.rx];
}
